fix: 상장 종목 조회 서비스 수정
- 람다 스트림 파이프 연산으로 변경